<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search"
        android:icon="@drawable/rq_interceptor_ic_search"
        android:title="@string/rq_interceptor_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="collapseActionView|ifRoom" />
    <item
        android:title="@string/rq_interceptor_more_details"
        android:id="@+id/more_details"
        android:icon="@drawable/rq_interceptor_ic_more_details"
        android:visible="true"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/export"
        android:icon="@drawable/rq_interceptor_ic_share"
        android:title="@string/rq_interceptor_export"
        app:showAsAction="ifRoom">
        <menu>
            <group>
                <item
                    android:id="@+id/share_text"
                    android:title="@string/rq_interceptor_share_as_text" />
                <item
                    android:id="@+id/share_har"
                    android:title="@string/rq_interceptor_share_as_har" />
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/clear"
        android:icon="@drawable/rq_interceptor_ic_delete"
        android:title="@string/rq_interceptor_clear"
        app:showAsAction="ifRoom" />

</menu>
