<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/rq_interceptor_doub_grid">

    <androidx.constraintlayout.widget.Guideline
      android:id="@+id/overviewGuideline"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      app:layout_constraintGuide_percent="0.28" />

    <TextView
      style="@style/RqInterceptor.TextAppearance.Label"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:gravity="start"
      android:text="@string/rq_interceptor_url"
      app:layout_constraintEnd_toStartOf="@id/overviewGuideline"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

    <TextView
      android:id="@+id/url"
      style="@style/RqInterceptor.TextAppearance.Value"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:gravity="start"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="@id/overviewGuideline"
      app:layout_constraintTop_toTopOf="parent"
      tools:text="https://example.com/path/to/resource?here=might_be_really_long" />

    <TextView
      style="@style/RqInterceptor.TextAppearance.Label"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:text="@string/rq_interceptor_method"
      app:layout_constraintEnd_toStartOf="@id/overviewGuideline"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/url" />

    <TextView
      android:id="@+id/method"
      style="@style/RqInterceptor.TextAppearance.Value"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="@id/overviewGuideline"
      app:layout_constraintTop_toBottomOf="@+id/url"
      tools:text="GET" />

    <TextView
      style="@style/RqInterceptor.TextAppearance.Label"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:text="@string/rq_interceptor_protocol"
      app:layout_constraintEnd_toStartOf="@id/overviewGuideline"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/method" />

    <TextView
      android:id="@+id/protocol"
      style="@style/RqInterceptor.TextAppearance.Value"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="@id/overviewGuideline"
      app:layout_constraintTop_toBottomOf="@id/method"
      tools:text="HTTP/1.1" />

    <TextView
      style="@style/RqInterceptor.TextAppearance.Label"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:text="@string/rq_interceptor_status"
      app:layout_constraintEnd_toStartOf="@id/overviewGuideline"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/protocol" />

    <TextView
      android:id="@+id/status"
      style="@style/RqInterceptor.TextAppearance.Value"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="@id/overviewGuideline"
      app:layout_constraintTop_toBottomOf="@id/protocol"
      tools:text="Complete" />

    <TextView
      style="@style/RqInterceptor.TextAppearance.Label"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:text="@string/rq_interceptor_response"
      app:layout_constraintEnd_toStartOf="@id/overviewGuideline"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/status" />

    <TextView
      android:id="@+id/response"
      style="@style/RqInterceptor.TextAppearance.Value"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="@id/overviewGuideline"
      app:layout_constraintTop_toBottomOf="@id/status"
      tools:text="200 OK" />

    <TextView
      android:id="@+id/ssl"
      style="@style/RqInterceptor.TextAppearance.Label"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/rq_interceptor_base_grid"
      android:text="@string/rq_interceptor_ssl"
      app:layout_constraintEnd_toStartOf="@id/overviewGuideline"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/response" />

    <TextView
      android:id="@+id/sslValue"
      style="@style/RqInterceptor.TextAppearance.Value"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/rq_interceptor_base_grid"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="@id/overviewGuideline"
      app:layout_constraintTop_toBottomOf="@id/response"
      tools:text="Yes" />

    <androidx.constraintlayout.widget.Group
      android:id="@+id/sslGroup"
      android:layout_width="0dp"
      android:layout_height="0dp"
      app:constraint_referenced_ids="sslValue,ssl"
      tools:layout_editor_absoluteX="16dp"
      tools:layout_editor_absoluteY="16dp" />

    <TextView
      android:id="@+id/tlsVersion"
      style="@style/RqInterceptor.TextAppearance.Label"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:text="@string/rq_interceptor_tls_version"
      app:layout_constraintEnd_toStartOf="@id/overviewGuideline"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/sslValue" />

    <TextView
      android:id="@+id/tlsVersionValue"
      style="@style/RqInterceptor.TextAppearance.Value"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="@id/overviewGuideline"
      app:layout_constraintTop_toBottomOf="@id/sslValue"
      tools:text="TLS 1.2" />

    <androidx.constraintlayout.widget.Group
      android:id="@+id/tlsGroup"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:visibility="gone"
      app:constraint_referenced_ids="tlsVersionValue,tlsVersion"
      tools:layout_editor_absoluteX="16dp"
      tools:layout_editor_absoluteY="16dp"
      tools:visibility="visible" />

    <TextView
      android:id="@+id/cipherSuite"
      style="@style/RqInterceptor.TextAppearance.Label"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:text="@string/rq_interceptor_tls_cipher_suite"
      android:visibility="gone"
      app:layout_constraintEnd_toStartOf="@id/overviewGuideline"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/tlsVersion"
      tools:visibility="visible" />

    <TextView
      android:id="@+id/cipherSuiteValue"
      style="@style/RqInterceptor.TextAppearance.Value"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:visibility="gone"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="@id/overviewGuideline"
      app:layout_constraintTop_toBottomOf="@id/tlsVersion"
      tools:text="TLS_ECDHE_RSA_WITH_AES_256_CBC_SHA"
      tools:visibility="visible" />

    <androidx.constraintlayout.widget.Group
      android:id="@+id/cipherSuiteGroup"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:visibility="gone"
      app:constraint_referenced_ids="cipherSuite,cipherSuiteValue"
      tools:layout_editor_absoluteX="16dp"
      tools:layout_editor_absoluteY="16dp"
      tools:visibility="visible" />

    <TextView
      android:id="@+id/requestTimeLabel"
      style="@style/RqInterceptor.TextAppearance.Label"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/rq_interceptor_base_grid"
      android:text="@string/rq_interceptor_request_time"
      app:layout_constraintEnd_toStartOf="@id/overviewGuideline"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/cipherSuiteValue" />

    <TextView
      android:id="@+id/requestTime"
      style="@style/RqInterceptor.TextAppearance.Value"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/rq_interceptor_base_grid"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="@id/overviewGuideline"
      app:layout_constraintTop_toBottomOf="@id/cipherSuiteValue"
      tools:text="05/02/17 11:52:49" />

    <androidx.constraintlayout.widget.Barrier
      android:id="@+id/barrierRequestTime"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:barrierDirection="bottom"
      app:constraint_referenced_ids="requestTimeLabel,requestTime" />

    <TextView
      android:id="@+id/responseTimeLabel"
      style="@style/RqInterceptor.TextAppearance.Label"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:text="@string/rq_interceptor_response_time"
      app:layout_constraintEnd_toStartOf="@id/overviewGuideline"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/barrierRequestTime" />

    <TextView
      android:id="@+id/responseTime"
      style="@style/RqInterceptor.TextAppearance.Value"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="@id/overviewGuideline"
      app:layout_constraintTop_toBottomOf="@id/barrierRequestTime"
      tools:text="05/02/17 11:52:49" />

    <androidx.constraintlayout.widget.Barrier
      android:id="@+id/barrierResponseTime"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:barrierDirection="bottom"
      app:constraint_referenced_ids="responseTimeLabel,responseTime" />

    <TextView
      style="@style/RqInterceptor.TextAppearance.Label"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:text="@string/rq_interceptor_duration"
      app:layout_constraintEnd_toStartOf="@id/overviewGuideline"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/barrierResponseTime" />

    <TextView
      android:id="@+id/duration"
      style="@style/RqInterceptor.TextAppearance.Value"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="@id/overviewGuideline"
      app:layout_constraintTop_toBottomOf="@id/barrierResponseTime"
      tools:text="405 ms" />

    <TextView
      android:id="@+id/requestSizeLabel"
      style="@style/RqInterceptor.TextAppearance.Label"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/rq_interceptor_base_grid"
      android:text="@string/rq_interceptor_request_size"
      app:layout_constraintEnd_toStartOf="@id/overviewGuideline"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/duration" />

    <TextView
      android:id="@+id/requestSize"
      style="@style/RqInterceptor.TextAppearance.Value"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/rq_interceptor_base_grid"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="@id/overviewGuideline"
      app:layout_constraintTop_toBottomOf="@id/duration"
      tools:text="53 KB" />

    <androidx.constraintlayout.widget.Barrier
      android:id="@+id/barrierRequestSize"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:barrierDirection="bottom"
      app:constraint_referenced_ids="requestSizeLabel,requestSize" />

    <TextView
      android:id="@+id/responseSizeLabel"
      style="@style/RqInterceptor.TextAppearance.Label"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:text="@string/rq_interceptor_response_size"
      app:layout_constraintEnd_toStartOf="@id/overviewGuideline"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/barrierRequestSize" />

    <TextView
      android:id="@+id/responseSize"
      style="@style/RqInterceptor.TextAppearance.Value"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="@id/overviewGuideline"
      app:layout_constraintTop_toBottomOf="@id/barrierRequestSize"
      tools:text="148 KB" />

    <androidx.constraintlayout.widget.Barrier
      android:id="@+id/barrierResponseSize"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:barrierDirection="bottom"
      app:constraint_referenced_ids="responseSizeLabel,responseSize" />

    <TextView
      style="@style/RqInterceptor.TextAppearance.Label"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:text="@string/rq_interceptor_total_size"
      app:layout_constraintEnd_toStartOf="@id/overviewGuideline"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/barrierResponseSize" />

    <TextView
      android:id="@+id/totalSize"
      style="@style/RqInterceptor.TextAppearance.Value"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="@id/overviewGuideline"
      app:layout_constraintTop_toBottomOf="@id/barrierResponseSize"
      tools:text="201 KB" />

  </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
