<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:paddingVertical="20dp"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/rq_interceptor_device_id_label"
        style="@style/RqInterceptor.TextAppearance.Title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/rq_interceptor_device_id_label"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/rq_interceptor_app_id_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.3" />

    <TextView
        android:id="@+id/rq_interceptor_device_id"
        style="@style/RqInterceptor.TextAppearance.Title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/rq_interceptor_device_id_label"
        app:layout_constraintEnd_toStartOf="@+id/rq_interceptor_device_id_copy_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/rq_interceptor_device_id_label"
        app:layout_constraintTop_toTopOf="@+id/rq_interceptor_device_id_label"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.4" />

    <ImageButton
        android:id="@+id/rq_interceptor_device_id_copy_button"
        style="@android:style/Widget.Holo.Light.ImageButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?actionBarItemBackground"
        android:contentDescription="@string/rq_interceptor_copy_device_id_desc"
        android:padding="2dp"
        android:src="@drawable/rq_interceptor_ic_baseline_copy"
        app:layout_constraintBottom_toTopOf="@+id/rq_interceptor_app_id_copy_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.92"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.08" />

    <TextView
        android:id="@+id/rq_interceptor_app_id_label"
        style="@style/RqInterceptor.TextAppearance.Title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/rq_interceptor_app_id_label"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rq_interceptor_device_id_label"
        app:layout_constraintVertical_bias="0.77"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.3" />

    <TextView
        android:id="@+id/rq_interceptor_app_id"
        style="@style/RqInterceptor.TextAppearance.Title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/rq_interceptor_app_id_label"
        app:layout_constraintEnd_toStartOf="@+id/rq_interceptor_app_id_copy_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/rq_interceptor_app_id_label"
        app:layout_constraintTop_toTopOf="@+id/rq_interceptor_app_id_label"
        app:layout_constraintVertical_bias="0.7"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.4" />

    <ImageButton
        android:id="@+id/rq_interceptor_app_id_copy_button"
        style="@android:style/Widget.Holo.Light.ImageButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="?actionBarItemBackground"
        android:contentDescription="@string/rq_interceptor_copy_device_id_desc"
        android:padding="2dp"
        android:src="@drawable/rq_interceptor_ic_baseline_copy"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.92"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rq_interceptor_device_id_copy_button"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.08" />

</androidx.constraintlayout.widget.ConstraintLayout>
